# torchtab

./: README.md  pyproject.toml
outputs/default/__main__/2024-08-29/15-14-13/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/15-16-06/.hydra/: hydra.yaml
outputs/default/__main__/2024-08-29/15-20-55/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/15-23-20/.hydra/: hydra.yaml
outputs/default/__main__/2024-08-29/15-25-10/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/23-54-31/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/23-55-00/.hydra/: hydra.yaml
outputs/default/__main__/2024-08-29/23-55-25/.hydra/: hydra.yaml
outputs/default/__main__/2024-08-29/23-57-45/.hydra/: hydra.yaml
outputs/default/__main__/2024-08-29/23-58-24/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/23-58-38/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-29/23-59-00/.hydra/: config.yaml  hydra.yaml
outputs/default/__main__/2024-08-30/00-00-47/.hydra/: hydra.yaml
outputs/tabnet/__main__/2024-08-30/00-18-57/: .lr_find_dc65cad4-296e-4ced-9855-5920b1f97224.ckpt
src/torchtab/: __main__.py  utils.py
src/torchtab/conf/: config.yaml
src/torchtab/conf/data/: covtype.yaml  default.yaml
src/torchtab/conf/features/: covtype.yaml  default.yaml
src/torchtab/conf/model/: danet.yaml  default.yaml  tabnet.yaml  tabtransformer.yaml
src/torchtab/conf/optimizer/: default.yaml  plateau.yaml
src/torchtab/conf/trainer/: default.yaml
(+35 files in other folders)
